--- a/assets/css/password_reset.css
+++ b/assets/css/password_reset.css
@@ -1,7 +1,6 @@
-body
-{
-    overflow: hidden;
-}
+html, body { overflow: hidden; }
+
+header { overflow: hidden; }
 
 header
 {
